gateway/routes/route-argo.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-route
  namespace: platform
spec:
  parentRefs:
    - name: app-gateway
      namespace: platform

  hostnames:
    - "argo.kubesimplify.com"

  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /
    backendRefs:
      - name: argocd-server
        port: 80
