gateway/routes/route-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: nginx-gateway
spec:
  parentRefs:
    - name: homecluster-gateway
      namespace: nginx-gateway

  hostnames:
    - "grafana.654537853.xyz"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          port: 80
          namespace: monitoring
          kind: Service
