gateway/routes/route-prometheus.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prom-route
  namespace: nginx-gateway
spec:
  parentRefs:
    - name: homecluster-gateway
      namespace: nginx-gateway

  hostnames:
    - "prom.654537853.xyz"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          namespace: monitoring
          kind: Service
